qa: fix SonarQube reported issues
Fix several QA issues reported by SonarQube

on-behalf-of: @multiversio <info@multivers.io>